<resources>

    <string name="biometric">Biometric</string>
    <string name="backbtn">backBtn</string>
    <string name="ascending">Ascending</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="copy">Copy</string>
    <string name="select_theme">Select Theme</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="odia">Odia</string>
    <string name="bengali">Bengali</string>
    <string name="telugu">Telugu</string>
    <string name="gujarati">Gujarati</string>
    <string name="tamil">Tamil</string>
    <string name="marathi">Marathi</string>
    <string name="Please_enter_recovery_question">Please enter recovery question</string>
    <string name="enter_question">Enter question</string>
    <string name="enter_answer">Enter answer</string>
    <string name="recovery_question_or_recovery_answer_is_empty">Recovery Question or Recovery Answer is empty</string>
    <string name="hi_this_is_the_sample_toast_example">Hi! This is the sample toast example</string>
    <string name="the_amazon">The Amazon</string>
    <string name="icon_lock">Icon lock</string>
    <string name="password_manager">Password Manager</string>



    <string name="app_name">Password Manager</string>
    <string name="hello_world">Hello World!</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment sdfs</string>
    <string name="passkey_strength">Passkey strength</string>
    <string name="encryption_key_strength">Encryption key strength</string>
    <string name="save_database">Save Database</string>
    <string name="restore_database">Restore Database</string>
    <string name="export_csv">Export CSV</string>
    <string name="print_pdf">Print Pdf</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="passkey">Passkey</string>
    <string name="contact_me">Contact Us</string>
    <string name="rate_us_in_play_store">Rate us in play store</string>
    <string name="my_apps">My apps</string>
    <string name="import_export">Import Export</string>
    <string name="general">General</string>
    <string name="about_devloper">About Developer</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="details">details</string>
    <string name="website">Website </string>
    <string name="copy_pass">Copy pass</string>
    <string name="like">Like</string>
    <string name="delete">Delete</string>
    <string name="all">ALL</string>
    <string name="liked">LIKED</string>
    <string name="recent">RECENT</string>
    <string name="enteryourpin">Enter your Pin</string>
    <string name="enternewpin">Enter new Pin</string>
    <string name="wrongpin">Wrong pin\n</string>
    <string name="pinsetsuccessfully">Pin set successfully</string>
    <string name="confirmationpiniswrong">Confirmation pin is wrong</string>
    <string name="pindeactivated">Pin deactivated</string>
    <string name="pinisnotdeactivated">Pin is deactivated</string>
    <string name="pleasesetyournewpin">Plese enter new pin</string>
    <string name="setnewpin">Set new pin</string>
    <string name="enternewpinagain">Enter new pin again</string>
    <string name="wronganswer">Wrong answer</string>
    <string name="kindattention">Kind attention</string>
    <string name="notsetanyrecoveryqnandanswer">Not set any recovery qn and answer</string>
    <string name="back">Back</string>
    <string name="enteryourrecoveryquestionandanswer">Enter your question and anwer</string>
    <string name="enteryourrecoveryanswer">Enter recovery answer</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="add_password">Add password</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel?</string>
    <string name="title_can_not_be_empty">"Title can not be empty "</string>
    <string name="password_can_not_be_empty">"Password Can not be empty "</string>
    <string name="delete_password">Delete Password</string>
    <string name="are_you_sure_you_want_to_delete_this_password">"Are you sure you want to delete this Password "</string>
    <string name="password_is_not_correct">"Password is not Correct "</string>
    <string name="wrong_pin">Wrong Pin</string>
    <string name="username_is_saved_successfully">"Username is saved successfully "</string>
    <string name="random_username_is_assigned">Random username is assigned</string>
    <string name="new_password">New Password</string>
    <string name="enter_you_new_password_again">Enter you new password again</string>
    <string name="enter_your_new_password">"Enter your new Password "</string>
    <string name="enter_previous_password">Enter Previous  Password</string>
    <string name="please_enter_your_previous_password">"Please Enter Your Previous Password "</string>
    <string name="previous_password_is_not_correct">"Previous Password is not correct "</string>
    <string name="password_updated_successfully">"Password Updated Successfully "</string>
    <string name="confirm_password_is_not_same">Confirm Password is not same</string>
    <string name="your_pin_is_still_active">"Your Pin is Still Active "</string>
    <string name="pin_added_successfully">"Pin Added Successfully "</string>
    <string name="confirm_pin_was_wrong">"Confirm Pin was wrong  "</string>
    <string name="please_activate_pin_lock">Please Activate Pin Lock</string>
    <string name="deactivate">Deactivate</string>
    <string name="please_activate_pin_lock_to_use">"Please Activate Pin Lock to Use "</string>
    <string name="activate">Activate</string>
    <string name="biometric_login">Biometric login</string>
    <string name="login_with_biometric">Login with biometric</string>
    <string name="use_app_password">"Use App Password "</string>
    <string name="open_via_password">Open Via Password</string>
    <string name="authentication_succeed">Authentication Succeed</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="password_updated">"Password Updated "</string>
    <string name="ok">OK</string>
    <string name="shutting_down_the_app">Shutting down the app...</string>
    <string name="do_you_want_to_turn_on_fingerprint_lock">Do you want to turn on fingerprint lock?</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="permission_granted">"Permission granted "</string>
    <string name="permission_required">"Permission Required "</string>
    <string name="language_has_been_updated">" Language has been updated "</string>
    <string name="theme_has_been_updated">Theme has been Updated</string>
    <string name="theme_is_changed">"Theme is changed "</string>
    <string name="got_some_issue">"Got Some Issue "</string>
    <string name="select_type">Select Type</string>

    <string name="descending">Descending</string>
    <string name="apply">Apply</string>

    <string name="enter_username">Enter Username</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_website">Enter Website</string>
    <string name="submit">Submit</string>

    <string name="hi">Hi ,</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purplefantasy">PurpleFantasy</string>
    <string name="oceanblue">OceanBlue</string>
    <string name="dark">Dark</string>

    <string name="enter_password">Enter Password</string>
    <string name="pass_key">Pass Key</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="select_icon">Select Icon</string>
    <string name="analytics">Analytics</string>
    <string name="phone">Phone</string>
    <string name="apple">Apple</string>
    <string name="child">Child</string>
    <string name="code">Code</string>
    <string name="document">Document</string>
    <string name="discord">Discord</string>
    <string name="github">Github</string>
    <string name="gmail">Gmail</string>
    <string name="gaming">Gaming</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="love">Love</string>
    <string name="network">Network</string>
    <string name="netflix">Netflix</string>
    <string name="facebook">Facebook</string>
    <string name="shopping">Shopping</string>
    <string name="snapchat">Snapchat</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="work">Work</string>
    <string name="x">X</string>
    <string name="music">Music</string>
    <string name="photos">Photos</string>
    <string name="enter_username_please">Enter Username Please</string>
    <string name="select_order">Select Order</string>
    <string name="acending">Ascending</string>
    <string name="russian">Russian</string>
    <string name="pin">Pin</string>
    <string name="fingerprint">Biometric lock</string>
    <string name="vibhav_kumar">Vibhav kumar</string>
    <string name="srikant_mahanty">Srikant Mahanty</string>
    <string name="rahul_kumar">Rahul Kumar</string>
    <string name="aman_kumar">Aman Kumar</string>
    <string name="dismiss">Dismiss</string>
    <string name="developers">Developers</string>
    <string name="this_message_requires_you_to_grant_image_access_permissions_to_work_correctly">This message requires you to grant Image Access Permissions to work correctly</string>
    <string name="permissions_granted_now_you_can_proceed_with_document_access">"Permissions Granted. Now you can proceed with document access "</string>
    <string name="permissions_denied_gracefully_degrade_the_feature">Permissions Denied. Gracefully degrade the feature</string>
    <string name="this_feature_is_unavailable_since_it_requires_you_to_grant_image_access_permissions_to_work_correctly_please_go_to_settings_and_grant_the_image_access_permissions">This feature is unavailable since it requires you to grant Image Access Permissions to work correctly Please go to settings and grant the Image Access permissions</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="settings">Settings</string>


</resources>