<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@drawable/pop_up_background">

    <TextView
        android:id="@+id/select_language_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/select_language"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="16dp"
        android:textColor="?attr/myPrimaryTextColor"/>

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/english_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="16sp"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            style="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/hindi_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hindi"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:padding="8dp"
            style="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/oriya_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odia"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:padding="8dp"
            style="@style/CustomRadioButton"/>

        <RadioButton
            android:id="@+id/bengali_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bengali"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:padding="8dp"
            style="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/telugu_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telugu"
            android:textSize="16sp"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            android:padding="8dp"
            style="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/gujarati_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gujarati"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            style="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/tamil_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tamil"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            style="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/marathi_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marathi"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            style="@style/CustomRadioButton"/>
        <RadioButton
            android:id="@+id/russian_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/russian"
            android:textSize="16sp"
            android:padding="8dp"
            android:textColor="?attr/myPrimaryTextColor"
            android:fontFamily="@font/roboto_medium"
            style="@style/CustomRadioButton"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="24dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_btn_red"
            android:text="@string/cancel"
            android:fontFamily="@font/roboto_medium"
            android:textColor="?attr/my_icon_front_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_lang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/positive_btn"
            android:text="@string/save"
            android:fontFamily="@font/roboto_medium"
            android:textColor="?attr/myTabBackgroundColor" />
    </LinearLayout>

</LinearLayout>